--- a/FigRigPlugin/FacialSetUp.ui
+++ b/FigRigPlugin/FacialSetUp.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>980</width>
-    <height>559</height>
+    <width>1135</width>
+    <height>795</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -35,7 +35,7 @@
     </size>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>2</number>
    </property>
    <widget class="QWidget" name="tab_2">
     <attribute name="title">
@@ -81,9 +81,9 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>10</y>
+       <y>20</y>
        <width>921</width>
-       <height>161</height>
+       <height>251</height>
       </rect>
      </property>
      <property name="sizePolicy">
@@ -107,30 +107,14 @@
         <x>10</x>
         <y>20</y>
         <width>901</width>
-        <height>128</height>
+        <height>141</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_3">
-       <item row="0" column="4">
-        <widget class="QLabel" name="label_24">
-         <property name="minimumSize">
-          <size>
-           <width>460</width>
-           <height>0</height>
-          </size>
-         </property>
+       <item row="1" column="0">
+        <widget class="QLabel" name="label_2">
          <property name="text">
-          <string>1. 输入约束物体包含的名称：默认为_locator（如果：&lt;span style=&quot;color:#00ff00;&quot;&gt;leftEye&lt;/span&gt;&lt;span style=&quot; color:#ff0000;&quot;&gt;_locator&lt;/span&gt;）</string>
-         </property>
-         <property name="alignment">
-          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1" colspan="2">
-        <widget class="QLineEdit" name="driverNameLine">
-         <property name="text">
-          <string>_locator</string>
+          <string>driven Name</string>
          </property>
         </widget>
        </item>
@@ -141,47 +125,10 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="0">
-        <widget class="QLabel" name="label_2">
-         <property name="text">
-          <string>driven Name</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0">
-        <widget class="QPushButton" name="parentConstraintBtn">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-         <property name="text">
-          <string>parentConstraint</string>
-         </property>
-         <property name="default">
-          <bool>false</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="1">
-        <widget class="QPushButton" name="pointConstraintBtn">
-         <property name="text">
-          <string>pointConstraint</string>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="0">
         <widget class="QLabel" name="label">
          <property name="text">
           <string>driver Name</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1" colspan="2">
-        <widget class="QLineEdit" name="drivenNameLine">
-         <property name="text">
-          <string>_bn</string>
          </property>
         </widget>
        </item>
@@ -201,6 +148,22 @@
          </property>
         </widget>
        </item>
+       <item row="0" column="4">
+        <widget class="QLabel" name="label_24">
+         <property name="minimumSize">
+          <size>
+           <width>460</width>
+           <height>0</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>1. 输入约束物体包含的名称：默认为_locator（如果：&lt;span style=&quot;color:#00ff00;&quot;&gt;leftEye&lt;/span&gt;&lt;span style=&quot; color:#ff0000;&quot;&gt;_locator&lt;/span&gt;）</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
        <item row="2" column="3">
         <widget class="Line" name="line_4">
          <property name="orientation">
@@ -208,17 +171,26 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="3">
-        <widget class="Line" name="line_11">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
+       <item row="2" column="0">
+        <widget class="QPushButton" name="parentConstraintBtn">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>parentConstraint</string>
+         </property>
+         <property name="default">
+          <bool>false</bool>
          </property>
         </widget>
        </item>
-       <item row="0" column="3">
-        <widget class="Line" name="line_12">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
+       <item row="0" column="1" colspan="2">
+        <widget class="QLineEdit" name="driverNameLine">
+         <property name="text">
+          <string>_locator</string>
          </property>
         </widget>
        </item>
@@ -238,14 +210,94 @@
          </property>
         </widget>
        </item>
+       <item row="0" column="3">
+        <widget class="Line" name="line_12">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QPushButton" name="pointConstraintBtn">
+         <property name="text">
+          <string>pointConstraint</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="3">
+        <widget class="Line" name="line_11">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1" colspan="2">
+        <widget class="QLineEdit" name="drivenNameLine">
+         <property name="text">
+          <string>_bn</string>
+         </property>
+        </widget>
+       </item>
       </layout>
+     </widget>
+     <widget class="QLabel" name="label_30">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>170</y>
+        <width>104</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>skip rotate axis</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="skipRotateAxis">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>170</y>
+        <width>291</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>none</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="skipTransAxis">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>200</y>
+        <width>291</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>none</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_31">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>200</y>
+        <width>104</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>skip translate</string>
+      </property>
      </widget>
     </widget>
     <widget class="QGroupBox" name="constraintGroup_2">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>210</y>
+       <x>0</x>
+       <y>300</y>
        <width>921</width>
        <height>161</height>
       </rect>
